argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    cert-manager.io/cluster-issuer: le-example-http
    external-dns.alpha.kubernetes.io/hostname: argocd.dev-riles.xyz.
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "argocd.dev-riles.xyz"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 9091
  tls:
  - hosts:
    - argocd.dev-riles.xyz
    secretName: tls-argocd-ingress-http
